# StratifyOS-mcu-imxrt

./: .gitignore  CMakeLists.txt  LICENSE  README.md  mimxrt1052.cmake
include/: imxrt_arch.h  mcu_MIMXRT1052.h
include/cmsis/: MIMXRT1052.h
ldscript/: imxrt-common.ld  imxrt.ld  imxrt1050-edkb.ld  imxrt1052-rom.ld  imxrt105x.ld
ldscripts/: imxrt1050-evkb-rom.ld  imxrt1052-rom.ld  imxrt1052flexspi-rom.ld  imxrt1052ram-rom.ld  imxrt105x.ld
src/: CMakeLists.txt  adc_dev.c  adc_local.c  adc_local.h  core_dev.c  core_initclock.c  core_sleep.c  core_startup.c  core_startup.h  dac_local.h  flash_dev.c  hal_set_alternate_pin_function.c  i2c_dev.c  imxrt_dma.h  imxrt_flash.c  imxrt_flash.h  imxrt_local.h  mcu_dev.c  mem_dev.c  mmc_local.h  mpu_dev.c  pio_dev.c  sai_local.h  sdio_local.h  spi_dev.c  spi_dma_dev.c  spi_local.c  spi_local.h  tmr_dev.c  uart_dev.c  usb_dev.c  usb_otg_fs_dev.c  wdt.c
src/MIMXRT1052/: fsl_flexspi_nor_boot.h  fsl_lpuart.c  usb_device_config.h  usb_device_dci.c  usb_device_ehci.c  usb_misc.h  usb_osa.h  usb_osa_bm.h
src/MIMXRT1052CVJ5B/: core_startup.c
src/imxrt1052/: core_set_alternate_func.c  core_startup.c
